apps/arr-stack/deployment.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: arr-stack
  namespace: homelab
spec:
  replicas: 1
  selector:
    matchLabels:
      app: arr-stack
  template:
    metadata:
      labels:
        app: arr-stack
    spec:
      containers:
        - name: jellyfin
          image: ghcr.io/hotio/jellyfin@sha256:0168a2fb0b551babe7df97974f2de5e6212608fdee6b6099b88875f9357bdc26
          ports:
            - containerPort: 8096
          volumeMounts:
            - name: jellyfin-config
              mountPath: /config
            - name: data
              mountPath: /data
        - name: radarr
          image: ghcr.io/hotio/radarr@sha256:7f583b35dca64c1bffd27a39d61d4c3143633a29070260f76f1e5939006780d8
          ports:
            - containerPort: 7878
          volumeMounts:
            - name: radarr-config
              mountPath: /config
            - name: data
              mountPath: /data
        - name: sonarr
          image: ghcr.io/hotio/sonarr@sha256:ce095ff23043fe1397ac663d7d0885fbabdce9809257931ae9646c04d89567e8
          ports:
            - containerPort: 8989
          volumeMounts:
            - name: sonarr-config
              mountPath: /config
            - name: data
              mountPath: /data
        - name: sabnzbd
          image: ghcr.io/hotio/sabnzbd@sha256:7c291fcb9e70c0b8ab0394802955f6df37040bf0d53dd4a16099d9cda899e7db
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: sabnzbd-config
              mountPath: /config
            - name: data
              mountPath: /data
        - name: prowlarr
          image: ghcr.io/hotio/prowlarr@sha256:0fc62cbb850542dc235581986e9f64b774f08d3dfbe29f96a5c1177819f1b8a3
          ports:
            - containerPort: 9696
          volumeMounts:
            - name: prowlarr-config
              mountPath: /config
        - name: recyclarr
          image: ghcr.io/recyclarr/recyclarr:7.4
          securityContext:
            runAsUser: 1000
            runAsGroup: 1000
          volumeMounts:
            - name: recyclarr-config
              mountPath: /config
      volumes:
        - name: data
          nfs:
            server: 192.168.2.180
            path: "/srv/nfs4/data"
        - name: jellyfin-config
          nfs:
            server: 192.168.2.180
            path: "/srv/nfs4/config/jellyfin"
        - name: radarr-config
          nfs:
            server: 192.168.2.180
            path: "/srv/nfs4/config/radarr"
        - name: sonarr-config
          nfs:
            server: 192.168.2.180
            path: "/srv/nfs4/config/sonarr"
        - name: prowlarr-config
          nfs:
            server: 192.168.2.180
            path: "/srv/nfs4/config/prowlarr"
        - name: recyclarr-config
          nfs:
            server: 192.168.2.180
            path: "/srv/nfs4/config/recyclarr"
        - name: sabnzbd-config
          nfs:
            server: 192.168.2.180
            path: "/srv/nfs4/config/sabnzbd"
