apps/arr-stack/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyfin-ingress
  namespace: homelab
spec:
  ingressClassName: nginx
  rules:
    - host: jellyfin.home.rizexor.com
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: arr-stack
              port:
                name: jellyfin
  tls:
  - secretName: homelab
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarr-ingress
  namespace: homelab
spec:
  ingressClassName: nginx
  rules:
    - host: radarr.home.rizexor.com
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: arr-stack
              port:
                name: radarr
  tls:
  - secretName: homelab
